...
    <string name="over_total_container">จำนวนภาชนะที่พบไม่ควรมากกว่าภาชนะทั้งหมด</string>

    <string name="number_of_resident">จำนวนผู้อยู่อาศัย</string>
    <string name="person">คน</string>
    <string name="indoor">ภายในอาคาร</string>
    <string name="outdoor">ภายนอกอาคาร</string>
    <string name="total">ทั้งหมด</string>
    <string name="found">พบ</string>

    <string name="survey_container_description">ภาชนะที่สำรวจ</string>
    <string name="survey_container_bg_description">ภาพพื้นหลังการสำรวจภาชนะ</string>
    <string name="title_card_place_in_database">@string/find_place_by_database</string>
    <string name="title_card_place_recent_survey">@string/find_place_by_recent_survey</string>
...
    <string name="remove_location">ลบพิกัด</string>
    <string name="please_define_location">กรุณาระบุพิกัด</string>
    <string name="please_define_building_location">กรุณาระบุพิกัดของอาคาร</string>
    <string name="confirm_add_building_location">ยืนยันบันทึกพิกัดอาคารหรือไม่</string>

    <!--place type-->
    <string name="village_community">หมู่บ้าน/ชุมชน</string>
    <string name="school">สถานศึกษา</string>
    <string name="factory">โรงงาน</string>
    <string name="not_define_place_type">ทั้งหมด</string>

    <string name="please_define_building_name">กรุณาระบุชื่ออาคาร</string>
    <string name="please_define_house_no">กรุณาระบุบ้านเลขที่</string>
    <string name="building_edit">แก้ไขอาคาร</string>
    <string name="survey_place_not_found">ไม่พบสถานที่ที่สำรวจ</string>
    <string name="find_place_by_database">ค้นหาจากคลังข้อมูล</string>
    <string name="find_place_by_recent_survey">สถานที่ที่สำรวจล่าสุด</string>
    <string name="number_place_list_in_database">จำนวนรายการของรายชื่อสถานที่ที่แถบคลังข้อมูลตามประเภทที่เลือก</string>
    <string name="survey">สำรวจ</string>
    <string name="cancel">ยกเลิก</string>
    <string name="start_survey">เริ่มสำรวจ</string>
    <string name="confirm">ยืนยัน</string>
    <string name="torch">ไฟฉาย</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่</string>
    <string name="define_building_survey">ระบุอาคารสำรวจ</string>
    <string name="define_place_survey">ระบุสถานที่สำรวจ</string>
...
    <string name="format_ci">CI %1$d%%</string>
    <string name="format_container_count"><![CDATA[ภาชนะทั้งหมด <font color=#E91E63>%1$d</font> พบลูกน้ำยุงลาย <font color=#E91E63>%2$d</font>]]></string>
    <string name="format_house_survey">
        <![CDATA[สำรวจ <font color=#E91E63>%1$d</font> พบ <font color=#E91E63>%2$d</font>]]></string>
    <string name="detail_history_building_list">รายละเอียดการสำรวจ</string>
    <string name="add_place">เพิ่มสถานที่</string>
    <string name="places_not_found">ไม่พบสถานที่</string>
    <string name="place_type">ประเภทสถานที่</string>
    <string name="format_place_count">%1$d รายการ</string>
    <string name="format_building_count">%1$d อาคาร</string>
    <string name="place_name">ชื่อสถานที่</string>
    <string name="address">ที่อยู่</string>
    <string name="place_subtype_label">ประเภทสถานที่ย่อย</string>
...
