<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_header"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            style="@style/TanrabadTextAppearance.Title"
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_card_place_recent_survey"/>


    <TextView
            android:id="@+id/place_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/card_title"
            android:textIsSelectable="false"
            tools:text="200 รายการ"/>

</com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader>
